--- a/pages/modelos/crânio-equino.html
+++ b/pages/modelos/crânio-equino.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../../css/header.css">
-    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/pages/modelos/modelos-3d.css">
 </head>
-<body>
-
-    <header class="header">
-        <h1>LAPA</h1>
-        <h2>Crãnio Equino</h2>
-    </header>
-
-    <div id="container"></div>
-    
-
-    <script type="module" src="../../js/renderThree.js"></script>
+<body> 
+  <main class="main">
+    <model-viewer id="modelo-3d-femura" src="../../modelos-3d/CrânioEquino/3DModel.glb" environment-image="../../modelos-3d/Fêmur Direito Equino (2.1)/3DModel_LowPoly.jpg"  camera-controls autoplay touch-action="pan-y">
+        <img src="../../modelos-3d/CrânioEquino/3DModel.jpg" slot="texture" alt="Textura">
+        <div class="progress-bar hide" slot="progress-bar">
+            <div class="update-bar"></div>
+        </div>
+        <button slot="ar-button" id="ar-button">
+            View in your space
+        </button>
+    </model-viewer>
+    <div class="descricao">
+        <h2>Fêmur Direito Equino</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae laborum quidem consectetur sunt qui assumenda, exercitationem, neque voluptate et ab a officiis saepe eum illum cum esse debitis tempore?</p>
+    </div>
+  </main>
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.0/model-viewer.min.js"></script>
 </body>
 </html>
