Teste modelo com textura e com indicação de texto

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
                 <img src="./modelos-3d/CrânioEquino/Captura de tela 2023-03-09 085724.png" />
             </a>
             <h3 class="modelo__title">Crãnio Equino</h3>
-        </div>  
+        </div>
+        
+        <div class="modelo">
+            <a class="modelo__link" href="./pages/modelos/teste-incicacao.html">
+                <img src="./modelos-3d/CrânioEquino/Captura de tela 2023-03-09 085724.png" />
+            </a>
+            <h3 class="modelo__title">teste-incicação</h3>
+        </div>
         
     </main>
 
