--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3 class="modelo__title">Fêmur Direito Equino</h3>
         </div>
 
-        <div class="modelo">
+        <!-- <div class="modelo">
             <a class="modelo__link" href="./pages/modelos/crânio-equino.html">
                 <img src="./modelos-3d/CrânioEquino/Captura de tela 2023-03-09 085724.png" />
             </a>
@@ -39,7 +39,7 @@
                 <img src="./modelos-3d/CrânioEquino/Captura de tela 2023-03-09 085724.png" />
             </a>
             <h3 class="modelo__title">teste-incicação</h3>
-        </div>
+        </div> -->
         
     </main>
 
