--- a/pages/modelos/fêmur-direito-equino.html
+++ b/pages/modelos/fêmur-direito-equino.html
@@ -10,8 +10,7 @@
 </head>
 <body>
     <main class="main">
-        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Fêmur Direito Equino (2.1)/3DModel_LowPoly.glb" environment-image="../../modelos-3d/Fêmur Direito Equino (2.1)/3DModel_LowPoly.jpg"  camera-controls autoplay touch-action="pan-y">
-            <img src="../../modelos-3d/Fêmur Direito Equino (2.1)/3DModel_LowPoly.jpg" slot="texture" alt="Textura">
+        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Fêmur Direito Equino (2.1)/Femur-editado.glb"   camera-controls autoplay touch-action="pan-y">
             <div class="progress-bar hide" slot="progress-bar">
                 <div class="update-bar"></div>
             </div>
