Atualização do modelo de indicação dos nomes

--- a/src/pages/modelos/mandíbula-equina.html
+++ b/src/pages/modelos/mandíbula-equina.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAPA - Fêmur Direito Equino</title>
+    <title>LAPA - Escápula Dirieta Equina</title>
 
     <link rel="stylesheet" href="../../css/pages/modelos/modelos-3d.css">
 </head>
 <body>
     <main class="main">
-        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Fêmur Direito Equino/Femur-editado_modelo1.3.glb"   camera-controls autoplay touch-action="pan-y">
+        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Mandíbula Equina/escápula-esquerda-equina.glb" camera-controls autoplay touch-action="pan-y">
             <div class="progress-bar hide" slot="progress-bar">
                 <div class="update-bar"></div>
             </div>
@@ -19,11 +19,10 @@
             </button>
         </model-viewer>
         <div class="descricao">
-            <h2>Fêmur Direito Equino</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae laborum quidem consectetur sunt qui assumenda, exercitationem, neque voluptate et ab a officiis saepe eum illum cum esse debitis tempore?</p>
+            <h2>Mandíbula Equino</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid quae laborum quidem consectetur sunt qui assumenda, exercitationem, neque voluptate et ab a officiis saepe eum illum cum esse debitis tempore?</p>
         </div>
-    </main>
-    
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.0/model-viewer.min.js"></script>
+      </main>
+      <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.0/model-viewer.min.js"></script>
     
 </body>
 </html>
