--- a/src/pages/modelos/escápula-esquerda-equina.html
+++ b/src/pages/modelos/escápula-esquerda-equina.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="main">
-        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Escápula Esquerda Equina/escápula-esquerda-equina.glb" camera-controls autoplay touch-action="pan-y">
+        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Escápula Esquerda Equina/Nova tentativa.glb" camera-controls autoplay touch-action="pan-y">
             <div class="progress-bar hide" slot="progress-bar">
                 <div class="update-bar"></div>
             </div>
