--- a/src/pages/modelos/fêmur-direito-equino.html
+++ b/src/pages/modelos/fêmur-direito-equino.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="main">
-        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Fêmur Direito Equino/Femur-editado_modelo1.3.glb"   camera-controls autoplay touch-action="pan-y">
+        <model-viewer id="modelo-3d-femura" src="../../modelos-3d/Fêmur Direito Equino/Femur_modeloFinal1-aprovação.glb"   camera-controls autoplay touch-action="pan-y">
             <div class="progress-bar hide" slot="progress-bar">
                 <div class="update-bar"></div>
             </div>
