inserindo versão preta

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         </div>
 
         <div class="modelo">
+            <a class="modelo__link" href="./src/pages/modelos/fêmur-direito-equino-versaoPreta.html">
+                <img src="./src/img/femur-direita-equino.png" />
+            </a>
+            <h3 class="modelo__title">Fêmur Direito Equino versão preta</h3>
+        </div>
+
+        <div class="modelo">
             <a class="modelo__link" href="./src/pages/modelos/fêmur-esquerdo-equino.html">
                 <img src="./src/img/femur-esquerdo-equino.png" />
             </a>
